# ramera-sync

./: .gitignore  README.md  settings.conf.example
ramera-sync/: .gitignore  Cargo.toml  README.md  settings.conf.example  setup.sh  setup_dist.sh
ramera-sync-web-ui/: Cargo.toml  README.md
ramera-sync-web-ui/src/: main.rs
ramera-sync/scripts/: build_deploy_bundle.sh
ramera-sync/src/: b2.rs  camera_filter.rs  config.rs  discovery.rs  error.rs  ffmpeg.rs  http_auth.rs  log_control.rs  main.rs  nvr.rs  service.rs  storage.rs  types.rs
ramera-sync/src/providers/: generic.rs  hikvision.rs  mod.rs
