[package]
name = "ramera-sync-web-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1"
